// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list item render correctly with role 1`] = `
<div
  className="sc-fzoLsD ffqgCm"
>
  <p
    className="sc-fzpans kEnlFJ"
  >
    test
  </p>
  <p
    className="sc-fzplWN dkHTim"
  >
    admin
  </p>
</div>
`;

exports[`user list item render correctly without role 1`] = `
<div
  className="sc-fzoLsD ffqgCm"
>
  <p
    className="sc-fzpans kEnlFJ"
  >
    test
  </p>
  <button
    className="sc-AxjAm sc-AxirZ sc-fznyAO iiOVWb"
    onClick={[Function]}
  >
    delete
  </button>
</div>
`;
